# Stereo_Show

./: CMakeLists.txt  README.md
.kdev4/: Stereo_Show.kdev4
src/: imagescrollview.cpp  imagescrollview.h  imageshowview.cpp  imageshowview.h  mainwindow.cpp  mainwindow.h  stereodialog.cpp  stereodialog.h
ui/: mainwindow.ui  stereodialog.ui
